--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 id="home">Anisha Shetty</h1>
         </div>
         <div class="navbar">
-            <li><a href="#home">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#about">About</a> </li>
             <li><a href="#skill">Skils</a></li>
             <li><a href="#project">projects</a></li>
