--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
             <div class="innerbox">
                 <div class="innerbox1"></div>
                 <div class="innerbox2">
-                    <p>Hello, my name is Anisha and I'm a student studying computer science engineering at Canara Engineering college.  I've always been fascinated by technology and problem-solving, which led me to pursue engineering.In my studies so far, I've enjoyed courses in programming ,like data structures ,C and C++. </p>
+                    <p>Hello, my name is Anisha and I'm a student studying computer science engineering at Canara
+                        Engineering college. I've always been fascinated by technology and problem-solving, which led me
+                        to pursue engineering.In my studies so far, I've enjoyed courses in programming ,like data
+                        structures ,C and C++. </p>
                     <button type="button"> MY Project<i class="fa-solid fa-arrow-down"></i> </button>
                 </div>
             </div>
@@ -155,12 +158,14 @@
             <div class="cont2">
                 <p>You can also get in touch with me by filling this form</p>
                 <h3>Name*</h1>
-                    <input class="form" type="text" name="Name" placeholder="Enter yout name">
-                    <h3>Email*</h3>
-                    <input class="form" type="text" name="Email" placeholder="Enter your email">
-                    <h3>message*</h3>
-                    <input class="form" type="text" name="Message" placeholder="meassage" style="height: 100px;">
-                    <button type="button">Send meassage</button>
+                    <form action="https://formspree.io/f/xayrqlnn" method="POST">
+                        <input class="form" type="text" name="Name" placeholder="Enter yout name">
+                        <h3>Email*</h3>
+                        <input class="form" type="text" name="Email" placeholder="Enter your email">
+                        <h3>message*</h3>
+                        <input class="form" type="text" name="Message" placeholder="meassage" style="height: 100px;">
+                        <button type="submit">Send meassage</button>
+                    </form>
             </div>
         </div>
     </div>
