--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1 id="home">Hello There 👋</h1>
             <h1> I am Anisha Shetty</h1>
             <p>A computer science student passionate about programming and design.</p>
-            <button type="button">See My Work</button>
+            <button type="button">Resume</button>
             <i class="fa-regular fa-envelope"></i>
             <i class="fa-brands fa-linkedin"></i>
 
@@ -48,11 +48,8 @@
             <div class="innerbox">
                 <div class="innerbox1"></div>
                 <div class="innerbox2">
-                    <p>Hello, my name is Anisha and I'm a student studying computer science engineering at Canara
-                        Engineering college. I've always been fascinated by technology and problem-solving, which led me
-                        to pursue engineering.In my studies so far, I've enjoyed courses in programming ,like data
-                        structures ,C and C++. </p>
-                    <button type="button"> MY Project<i class="fa-solid fa-arrow-down"></i> </button>
+                    <p>Hello, my name is Anisha, 19 year old student, studying computer science engineering at Canara Engineering college.  I've always been fascinated by technology and problem-solving, which led me to pursue engineering. In my studies so far, I've enjoyed courses in programming ,like data structures ,C and C++ and also Webdevelopment.Passionate about technology and solving  problems through innovative solutions.I want to keep learning, work on helpful projects, and become a  good software engineer</p>
+                    <button type="button"> <a href="#project">MY Project</a><i class="fa-solid fa-arrow-down" style="padding-left: 5px;"></i> </button>
                 </div>
             </div>
         </div>
@@ -136,18 +133,18 @@
 
                     <div class="A">
                         <i class="fa-brands fa-github"></i>
-                        <p>Github</p>
+                        <p><a href="https://github.com/Anishashettty/github-demo">Github</a></p>
                     </div>
                     <div class="B">
                         <i class="fa-brands fa-linkedin"></i>
-                        <p>Linkedin</p>
+                        <p> <a href="https://www.linkedin.com/login">Linkedin</a></p>
                     </div>
                 </div>
 
                 <div class="contB">
                     <div class="C">
                         <i class="fa-regular fa-envelope"></i>
-                        <p>Email</p>
+                        <p><a href="https://mail.google.com/mail/u/0/#inbox"> Email</a> </p>
                     </div>
                     <div class="D">
                         <i class="fa-solid fa-mobile-screen-button"></i>
