--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolip</title>
+    <link rel="shortcut icon" href="myPhoto.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
+   <div class="container">
+
+   </div>
     <div class="jion">
         <div class="dump">
             <h1 id="home">Anisha Shetty</h1>
@@ -42,6 +46,7 @@
 
     </div>
 
+
     <div class="details">
         <h1 id="about">About me</h1>
         <div class="jion5">
@@ -67,23 +72,23 @@
             </div>
             <div class="sec">
                 <h1>backend development</h1>
-                <li>Node Js</li>
-                <li>Express Js</li>
-                <li>API</li>
+                <li></li>
+                <li</li>
+                <li></li>
             </div>
         </div>
         <div class="secondline">
             <div class="thi">
                 <h1>Frontend development</h1>
-                <li>ANGULAR JS</li>
-                <li>VUE JS</li>
-                <li>REACT JS</li>
+                <li></li>
+                <li></li>
+                <li></li>
             </div>
             <div class="fou">
                 <h1>Databsae</h1>
-                <li>MONGO DB</li>
-                <li>SQL</li>
-                <li>POSTGRES SQL</li>
+                <li></li>
+                <li></li>
+                <li></li>
             </div>
         </div>
     </div>
@@ -119,6 +124,7 @@
                 <div class="pro7">
                     <h1>My project7</h1>
                     <div class="mypro7"></div>
+                   
                 </div>
             </div>
         </div>
@@ -170,6 +176,7 @@
     <div class="end">
         <p> Built by Anisha Shetty 🤘</p>
     </div>
+
 
 </body>
 
